fixed example bugs on mobile

--- a/example/css-image-viewer/style.css
+++ b/example/css-image-viewer/style.css
@@ -1,8 +1,10 @@
 html {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 body {
+    position: relative;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -34,7 +36,7 @@ body * {
     display: flex;
     flex-flow: row;
     justify-content: center;
-    z-index: 9999;
+    z-index: 9000;
 }
 
 #kitten--action-bar .kitten--action-button {
@@ -44,7 +46,7 @@ body * {
 .kitten--info-text {
     color: #FFFFFF;
     padding: 20px;
-    z-index: 9999;
+    z-index: 8000;
 }
 
 .kitten--info--top-right {
